# straightline-datalabs-vault-app

./: .gitignore  LICENSE  README.md  paths.py  pyproject.toml  vault_cli.py  wsgi.py
api/: app.py
data/: manifest.jsonl
docs/: ARCHITECTURE.md
docs/cases/: maxwell_1320.md
lists/: irs_travel.txt
scripts/: bulk_ingest.py  case_overview.py  cleanup_manifest.py  extract_text.py  fetch.py  index_docs.py  ingest_file.py  ingest_url.py  list_manifest.py  normalize_manifest.py  paths.py  requirements.txt  search_cli.py  test_manifest.py  test_ocr.py  topic_harvest.py  web_app.py  web_search_ingest.py
static/: index.html
vault_core/: crawler.py  ingest.py  logging_config.py  manifest.py  ocr.py  paths.py  search_backend.py  search_providers.py
vault_core/ingest/: __init__.py  fetch.py  pipeline.py
vault_core/metadata/: provenance.py
vault_core/search/: indexer.py
vault_core/web/: api.py  app.py
